tests/specs/bench/no_run/no_run.out
Check [WILDCARD]/no_run.ts
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _value: string = 1;
      ~~~~~~
    at [WILDCARD]/no_run.ts:1:7

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
